read from pr template md before trying other things

--- a/action.yaml
+++ b/action.yaml
@@ -7,12 +7,16 @@ inputs:
     description: "Path to custom validation configuration file (default uses PR front matter or .github/pr-validation-config.yml)"
     required: false
     default: ".github/pr-validation-config.yml"
+  template_path:
+    description: "Path to the PR template markdown file containing validation rules (takes precedence over PR body frontmatter)"
+    required: false
+    default: ".github/PULL_REQUEST_TEMPLATE.md"
   fail_on_error:
     description: "Whether to fail the workflow if validation fails"
     required: false
     default: "true"
   github_token:
-    description: "GitHub token for API access
+    description: "GitHub token for API access"
     required: false
 
 outputs:
