--- a/.github/workflows/enforce-pr-checkboxes.yml
+++ b/.github/workflows/enforce-pr-checkboxes.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Validate PR Template
         uses: jcantosz/action-check-pr-description@main
         with:
-          config_path: .github/pr-validation-config.yml
+          config_file: .github/pr-validation-config.yml
           fail_on_error: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
