--- a/.github/workflows/enforce-pr-checkboxes.yml
+++ b/.github/workflows/enforce-pr-checkboxes.yml
@@ -33,3 +33,4 @@ jobs:
           config_file: .github/pr-validation-config.yml
           fail_on_error: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          config_branch: main
