--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,10 @@ inputs:
     description: "Path to configuration file (supports .md files with frontmatter or direct .yml/.yaml config files)"
     required: false
     default: ".github/PULL_REQUEST_TEMPLATE.md"
+  config_branch:
+    description: "Branch to fetch the configuration file from. If not specified, uses the current branch."
+    required: false
+    default: ""
   fail_on_error:
     description: "Whether to fail the workflow if validation fails"
     required: false
