--- a/.github/workflows/enforce-pr-checkboxes.yml
+++ b/.github/workflows/enforce-pr-checkboxes.yml
@@ -42,5 +42,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh pr comment ${{ github.event.pull_request.number }} \
-            --body "Validation result: ${{ steps.validate-template.outputs.validation-result }}\nErrors: ${{ steps.validate-template.outputs.validation-errors }}" \
+            --body "Validation result: ${{ steps.validate-template.outputs.validation-result }}<br />Errors: ${{ steps.validate-template.outputs.validation-errors }}" \
             --repo ${{ github.repository }}
