--- a/.github/workflows/enforce-pr-checkboxes.yml
+++ b/.github/workflows/enforce-pr-checkboxes.yml
@@ -42,6 +42,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr comment "${{ github.event.pull_request.number }}" \
-            --body "Validation result: ${{ steps.validate-template.outputs.validation-result }}<br />Errors: ${{ steps.validate-template.outputs.validation-errors }}" \
-            --repo "${{ github.repository }}"
+          echo 'body Validation result: ${{ steps.validate-template.outputs.validation-result }}\nErrors:\n${{ steps.validate-template.outputs.validation-errors }}' | gh pr comment "${{ github.event.pull_request.number }}" \
+            --repo "${{ github.repository }}" \
+            --body-file -
